# spm

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: pages.yml
docs/: main-doc.md
lib/: Cargo.toml
lib/src/: config.rs  db.rs  helpers.rs  lib.rs  lock.rs  package.rs  patch.rs  security.rs
spm/: Cargo.toml
spm/src/: config.rs  handlers.rs  helpers.rs  main.rs  security.rs
spmc/: Cargo.toml
spmc/src/: main.rs
spmd/: Cargo.toml
spmd/src/: handlers.rs  helpers.rs  main.rs
src/: config.rs  conversion.rs  db.rs  handlers.rs  helpers.rs  lock.rs  main.rs  package.rs  patch.rs  security.rs
test-pkg/: pkg.toml
website/: index.html  style.css
website/changelog/: index.html
