[package]
name = "spm"
version = "1.3.6"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
clap = "4.5.21"
dirs = "5.0.1"
indicatif = "0.17.9"
libc = "0.2.164"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rpassword = "7.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"
zstd = "0.13.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
