[package]
name = "spm"
version = "3.14.25"
edition = "2021"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.93"
ar = "0.9.0"
base64 = "0.22.1"
bzip2 = "0.4.4"
clap = "4.5.21"
dirs = "5.0.1"
fcntl = "0.1.0"
flate2 = "1.0.35"
indicatif = "0.17.9"
libc = "0.2.164"
magic-crypt = "4.0.1"
nix = { version = "0.29.0", features = ["fs"] }
num_cpus = "1.16.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rpassword = "7.3.1"
rpm = "0.16.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tar = "0.4.43"
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"
xz2 = "0.1.7"
zip = "2.2.1"
zstd = "0.13.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
