# Workspace Cargo.toml
[workspace]
members = [
    "lib",
    "spm",
    "spmc"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
dirs = "5.0.1"
libc = "0.2.167"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde_json = "1.0.133"
zstd = "0.13.2"

[workspace.package]
edition = "2021"
license = "GPL-3.0"
version = "3.14.27"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 'z'
