[package]
name = "spm_lib"
version.workspace = true
edition.workspace = true
license.workspace = true
include = ["lib/**/*", "LICENSE", "README.md"]

[lib]
name = "spm_lib"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
dirs.workspace = true
libc.workspace = true
nix = { version = "0.29.0", features = ["fs"] }
reqwest.workspace = true
serde_json.workspace = true
zstd.workspace = true