[package]
name = "spm"
version.workspace = true
edition.workspace = true
license.workspace = true
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap = "4.5.21"
dirs.workspace = true
indicatif = "0.17.9"
magic-crypt = "4.0.1"
num_cpus = "1.16.0"
reqwest.workspace = true
rpassword = "7.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json.workspace = true
spm_lib = { path = "../lib" }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"