[package]
name = "spm"
version.workspace = true
edition.workspace = true
license.workspace = true
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap = "4.5.21"
dirs.workspace = true
magic-crypt = "4.0.1"
reqwest.workspace = true
rpassword = "7.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json.workspace = true
spm_lib = { path = "../lib" }
