[package]
name = "spmd"
edition.workspace = true
license.workspace = true
version = "3.15.28"

[dependencies]
clap = "4.5.21"
rpassword = "7.3.1"
spm_lib = { path = "../lib" }
anyhow.workspace = true
base64.workspace = true
dirs.workspace = true
indicatif = "0.17.7"
libc.workspace = true
num_cpus = "1.16.0"
reqwest.workspace = true
serde_json.workspace = true
toml = "0.8.10"
uuid = {version = "1.7.0", features = ["v4"]}
walkdir = "2.4.0"
zstd.workspace = true
